src/objects/LRN_Exam__c.object
<CustomObject>
    <fields>
        <fullName>Ended_Datetime__c</fullName>
        <label>Ended Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LRN_Exam_Template__c</fullName>
        <label>LRN Exam Template</label>
        <referenceTo>LRN_Exam_Template__c</referenceTo>
        <relationshipName>LRN_Exams</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Number_Answered__c</fullName>
        <label>Number Answered</label>
        <summaryFilterItems>
            <field>LRN_Exam_Detail__c.Value__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>LRN_Exam_Detail__c.Exam__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_Questions__c</fullName>
        <label>Number Questions</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Review_Detail__c</fullName>
        <label>Review Detail</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Size__c</fullName>
        <label>Size</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Started_Datetime__c</fullName>
        <label>Started Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status_Detail__c</fullName>
        <label>Status Detail</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>pending</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>reviewing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>validating</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <label>LRN Exam</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Exam - {00000}</displayFormat>
        <label>LRN Exam Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LRN Exams</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>